[gd_scene load_steps=6 format=2]

[ext_resource path="res://level/walls_and_ceiling.tres" type="TileSet" id=1]
[ext_resource path="res://paddle/Paddle.tscn" type="PackedScene" id=2]
[ext_resource path="res://level/level.gd" type="Script" id=3]
[ext_resource path="res://ball/Ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://level/UI.tscn" type="PackedScene" id=5]

[node name="Level" type="Node2D"]
script = ExtResource( 3 )

[node name="WallsAndCeiling" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 20, 20 )
format = 1
tile_data = PoolIntArray( 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0, 262164, 1, 0, 262165, 1, 0, 262166, 1, 0, 262167, 1, 0, 262168, 1, 0, 262169, 1, 0, 262170, 1, 0, 262171, 1, 0, 262172, 1, 0, 262173, 1, 0, 327680, 0, 0, 327709, 0, 0, 393216, 0, 0, 393245, 0, 0, 458752, 0, 0, 458781, 0, 0, 524288, 0, 0, 524317, 0, 0, 589824, 0, 0, 589853, 0, 0, 655360, 0, 0, 655389, 0, 0, 720896, 0, 0, 720925, 0, 0, 786432, 0, 0, 786461, 0, 0, 851968, 0, 0, 851997, 0, 0, 917504, 0, 0, 917533, 0, 0, 983040, 0, 0, 983069, 0, 0, 1048576, 0, 0, 1048605, 0, 0, 1114112, 0, 0, 1114141, 0, 0, 1179648, 0, 0, 1179677, 0, 0, 1245184, 0, 0, 1245213, 0, 0, 1310720, 0, 0, 1310749, 0, 0, 1376256, 0, 0, 1376285, 0, 0, 1441792, 0, 0, 1441821, 0, 0, 1507328, 0, 0, 1507357, 0, 0, 1572864, 0, 0, 1572893, 0, 0, 1638400, 0, 0, 1638429, 0, 0, 1703936, 0, 0, 1703965, 0, 0, 1769472, 0, 0, 1769501, 0, 0, 1835008, 0, 0, 1835037, 0, 0, 1900544, 0, 0, 1900573, 0, 0, 1966080, 0, 0, 1966109, 0, 0, 2031616, 0, 0, 2031645, 0, 0, 2097152, 0, 0, 2097181, 0, 0, 2162688, 0, 0, 2162717, 0, 0, 2228224, 0, 0, 2228253, 0, 0, 2293760, 0, 0, 2293789, 0, 0, 2359296, 0, 0, 2359325, 0, 0, 2424832, 0, 0, 2424861, 0, 0, 2490368, 0, 0, 2490397, 0, 0, 2555904, 0, 0, 2555933, 0, 0 )

[node name="Paddle" parent="." instance=ExtResource( 2 )]
position = Vector2( 300, 776 )

[node name="Ball" parent="." instance=ExtResource( 4 )]

[node name="Blocks" type="Node2D" parent="."]
position = Vector2( 40, 0 )

[node name="Yellows" type="Node2D" parent="Blocks"]
position = Vector2( 0, 320 )

[node name="Greens" type="Node2D" parent="Blocks"]
position = Vector2( 0, 280 )

[node name="Oranges" type="Node2D" parent="Blocks"]
position = Vector2( 0, 240 )

[node name="Reds" type="Node2D" parent="Blocks"]
position = Vector2( 0, 200 )

[node name="UI" parent="." instance=ExtResource( 5 )]

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[connection signal="moved" from="Paddle" to="." method="_on_Paddle_moved"]
[connection signal="ball_left_screen" from="Ball" to="." method="_on_Ball_ball_left_screen"]
[connection signal="collision_with_tile" from="Ball" to="." method="_on_Ball_collision_with_tile"]
[connection signal="launched" from="Ball" to="." method="_on_Ball_launched"]
[connection signal="struck_ceiling" from="Ball" to="." method="_on_Ball_struck_ceiling"]
[connection signal="timeout" from="GameOverTimer" to="." method="_on_GameOverTimer_timeout"]
